GNOME Bugzilla – Bug 673299
fails to compile evolution plugin - need new header for libedataserverui eclient api change
Last modified: 2012-04-11 10:44:21 UTC
Created attachment 211086 [details] [review] use new eclient api - libedataserverui >= 3.1.2 Fixes build failure against newer evolution-data-server: evolution.c: In function 'add_sources': evolution.c:205:2: warning: implicit declaration of function 'e_client_utils_get_sources' [-Wimplicit-function-declaration] evolution.c:205:2: warning: nested extern declaration of 'e_client_utils_get_sources' [-Wnested-externs] evolution.c:206:6: error: 'E_CLIENT_SOURCE_TYPE_CONTACTS' undeclared (first use in this function) evolution.c:206:6: note: each undeclared identifier is reported only once for each function it appears in e-contact-entry.c: In function 'e_contact_entry_display_func': e-contact-entry.c:230:22: warning: operation on 'item->identifier' may be undefined [-Wsequence-point] e-contact-entry.c: In function 'view_completed_cb': e-contact-entry.c:347:3: warning: comparison between 'EBookViewStatus' and 'enum <anonymous>' [-Wenum-compare] ---
commit bd639b53469da0252f2f44c7995d8f4ae503431b Author: Bastien Nocera <hadess@hadess.net> Date: Wed Apr 11 11:43:31 2012 +0100 evolution: Finish incomplete cherry-pick From 42ca3421e3f0daff4bceaa7ad9964c0828770df9 We were missing the headers inclusion. https://bugzilla.gnome.org/show_bug.cgi?id=673299