evolution: Finish incomplete cherry-pick

From 42ca3421e3f0daff4bceaa7ad9964c0828770df9

We were missing the headers inclusion.

https://bugzilla.gnome.org/show_bug.cgi?id=673299